--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             height: 100%;
             min-width: 10px;
         }
-        /* Dropdown Button */
 
+        /* Dropdown Button */
         .dropbtn {
             background-color: #4CAF50;
             color: white;
-            padding: 16px;
-            font-size: 16px;
+            padding: 12px;
+            font-size: 18px;
             border: none;
         }
         /* The container <div> - needed to position the dropdown content */
@@ -115,7 +115,6 @@
 </head>
 
 <body onload="init()">
-    <!--button onclick="Module.__Z5sayHiv()">Click me</button>
     <div class="dropdown">
         <button class="dropbtn">Dropdown</button>
         <div class="dropdown-content">
@@ -123,7 +122,7 @@
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
         </div>
-      </div-->
+      </div>
 
     <div class="splitter">
         <div id="editor"></div>
@@ -141,12 +140,17 @@
         </div>
     </div>
 
+    <script src="/examples.js" type="text/javascript" charset="utf-8"></script>
+    <script type='text/javascript'>
+        console.log(getExamples())
+    </script>
+
     <script src="/ace/ace.js" type="text/javascript" charset="utf-8"></script>
     <script type='text/javascript'>
         var qtLoader;
         var editor = ace.edit("editor");
         editor.setTheme("ace/theme/dracula");
-        editor.session.setMode("ace/mode/rust");
+        editor.setOption("showInvisibles", true)
         editor.commands.addCommand({
             name: 'save',
             bindKey: {
@@ -192,17 +196,9 @@
                     Module.instantiateWasm = function(imports, successCallback) {
                         console.log('instantiateWasm: instantiating asynchronously');
                     };
-                    //document.getElementById("editor").innerHTML = Module.self().code();
                 },
             });
             qtLoader.loadEmscriptenModule("qmlonline");
-            console.log("qtloader", qtLoader);
-            console.log("module", Module);
-            //console.log("module", Module.Util());
-
-            Module.instantiateWasm = function(imports, successCallback) {
-                console.log('instantiateWasm: instantiating asynchronously');
-            };
 
             // TODO: Find a better way to set the initial code and wait for the webassembly to start
             var intervalID = setInterval(
@@ -217,7 +213,7 @@
         }
 
         // function is used for dragging and moving
-        function dragElement(element, direction) {
+        function dragElement(element) {
             var md; // remember mouse down info
             const first = document.getElementById("editor");
             const second = document.getElementById("second");
@@ -226,7 +222,6 @@
             element.onmousedown = onMouseDown;
 
             function onMouseDown(e) {
-                //console.log("mouse down: " + e.clientX);
                 md = {
                     e,
                     offsetLeft: element.offsetLeft,
@@ -236,43 +231,26 @@
                 };
                 document.onmousemove = onMouseMove;
                 document.onmouseup = () => {
-                    //console.log("mouse up");
                     document.onmousemove = document.onmouseup = null;
                 }
             }
 
             function onMouseMove(e) {
-                //console.log("mouse move: " + e.clientX);
                 var delta = {
                     x: e.clientX - md.e.x,
                     y: e.clientY - md.e.y
                 };
 
-                if (direction === "H") // Horizontal
-                {
-                    // prevent negative-sized elements
-                    delta.x = Math.min(Math.max(delta.x, -md.firstWidth),
-                        md.secondWidth);
+                delta.x = Math.min(Math.max(delta.x, -md.firstWidth), md.secondWidth);
 
-                    element.style.left = md.offsetLeft + delta.x + "px";
-                    first.style.width = (md.firstWidth + delta.x) + "px";
-                    //second.style.width = (md.secondWidth - delta.x) + "px";
-                    second.style.width = (md.secondWidth - delta.x) + "px";
-                    qtcanvas.style.setProperty("width", second.style.width + "px", "important");
-                    //qtcanvas.style.setProperty("height", h + "px", "important")
-                    //qtcanvas.style.width = "100%";
-                    //qtcanvas.style.height = "100%";
-                    //qtcanvas.width = (md.secondWidth - delta.x) * window.devicePixelRatio;
-                    //Browser.updateCanvasDimensions(qtcanvas);
-                    //console.log(qtcanvas.width, second.style.width, first.style.width, (md.secondWidth - delta.x)/(md.firstWidth + md.secondWidth))
-                    //qtLoader.resizeCanvasElement(qtcanvas)
-                    //Browser.setFullscreenCanvasSize()
-                    //Browser.updateCanvasDimensions(Module["canvas"])
-                }
+                element.style.left = md.offsetLeft + delta.x + "px";
+                first.style.width = (md.firstWidth + delta.x) + "px";
+                second.style.width = (md.secondWidth - delta.x) + "px";
+                qtcanvas.style.setProperty("width", second.style.width + "px", "important");
             }
         }
 
-        dragElement(document.getElementById("separator"), "H");
+        dragElement(document.getElementById("separator"));
     </script>
     <script type="text/javascript" src="qtloader.js"></script>
 </body>
