--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             padding: 12px;
             font-size: 18px;
             border: none;
+            font-family: sans-serif;
         }
         /* The container <div> - needed to position the dropdown content */
 
@@ -127,7 +128,7 @@
 <body onload="init()">
     <div class="row">
         <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
+            <button class="dropbtn">Examples</button>
             <div id="dropdown-content" class="dropdown-content"></div>
         </div>
 
